# Monifier

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.css  index.tsx
src-tauri/: Cargo.toml  manga.db  tauri.conf.json
src-tauri/src/: database.rs  main.rs  models.rs  scraper.rs
src/Components/: SideBar.tsx  Topbar.tsx
src/Pages/: Homepage.tsx
