[package]
name = "monifier"
version = "0.0.0"
description = "A Tauri App"
authors = ["makima-desu"]
license = ""
repository = "https://github.com/Makima-desu/Monifier"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-open", "window-start-dragging", "window-unmaximize", "protocol-all", "system-tray", "window-set-min-size", "window-unminimize", "window-minimize", "window-close", "window-maximize", "window-hide", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.22"
rusqlite = { version = "0.30.0", features = ["bundled"] }
select = "0.6.0"
humantime = "2.1.0"
thiserror = "1.0.40"
anyhow = "1.0.70"
chrono = "0.4"
# tokio = { version = "1", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
